# advent-of-code

./: .gitignore  .gitmodules  BENCHMARK.md  Cargo.toml  LICENSE  README  README.md  go.mod  go.sum  input.graph  main.rs  submit
2017/: blog.md  get_input  submit
2020/: BENCHMARK.md  Cargo.toml  main.rs
2021/: Cargo.toml  go.mod  main.go  main.rs  make_day_rs.sh
2021/day01/: mod.rs
2021/day02/: mod.rs
2021/day03/: mod.rs
2021/day04/: mod.rs
2021/day05/: mod.rs
2021/day06/: mod.rs
2021/day07/: mod.rs
2021/day08/: mod.rs
2021/day09/: mod.rs
2021/day10/: mod.rs
2021/day11/: mod.rs
2021/day12/: mod.rs
2021/day13/: mod.rs
2021/day14/: mod.rs
2021/day15/: mod.rs
2021/day16/: mod.rs
2021/day17/: mod.rs
2021/day18/: day18.go  day18_test.go
2021/day19/: mod.rs
2021/day20/: mod.rs
2021/day21/: mod.rs
2021/day22/: mod.rs
2021/day24/: mod.rs  mod_more_simplify.rs
2022/: go.mod
2023/: go.mod  go.sum
day01/: mod.rs
day01_bash/: part2.sh
day02/: mod.rs
day02_x86/: input  lib.nasm  part2.nasm
day03/: mod.rs
day03_matlab/: part1.m
day04/: mod.rs
day04_R/: part1.R  part2.R
day05/: mod.rs
day05_perl6/: part1.p6  part2.p6
day06/: mod.rs
day06_php/: part1.php
day07/: mod.rs
day07_julia/: part1.jl  part2.jl
day09/: mod.rs
day10/: mod.rs
day10_elixir/: part1.exs
day11_groovy/: part2.groovy
day12/: mod.rs
day12_go/: part1.go
day14_clojure/: project.clj
day15_cl/: part1.lisp
day16/: mod.rs
day17_javascript/: part2.js
day18/: mod.rs
day18_f#/: part2.fs
day20_c/: part1.c
shared/: Cargo.toml  (+1 more)
(+166 files in other folders)
