[package]
name = "aoc20"
version = "0.1.0"
authors = ["Nik Klassen <nikklassen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
itertools = "0.10.0"
lazy_static = "1.4.0"

[[bin]]
name = "aoc20"
path = "main.rs"
