[package]
name = "aoc21"
version = "0.1.0"
authors = ["Nik Klassen <nikklassen@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
pcre2 = "0.2.3"
ahash = "0.7.6"
shared = { path = "../shared" }

[[bin]]
name = "aoc21"
path = "main.rs"

[profile.release]
debug = true
