[package]
name = "aoc21"
version = "0.1.0"
authors = ["Nik Klassen <nikklassen@users.noreply.github.com>"]
edition = "2021"

[dependencies]
regex = "1.5.5"
itertools = "0.10.0"
lazy_static = "1.4.0"
pcre2 = "0.2.3"
ahash = "0.7.6"
rdxsort = "0.3.0"
pathfinding = "3.0.5"
shared = { path = "../shared" }

[[bin]]
name = "aoc21"
path = "main.rs"
